# switchwire

./: CMakeLists.txt  LICENSE.txt  ProjectHome.md  README.txt  Useswitchwire.cmake.in  switchwireBuildTreeSettings.cmake.in  switchwireConfig.cmake.in  switchwireConfigVersion.cmake.in
CMakeModules/: FindSqrat.cmake  FindSquirrel.cmake  Findpackage.cmake.in  Usepackage.cmake.in  VESInstallAutoDiscoveryTools.cmake  VESModuleInstall.cmake  VESSetupCompiler.cmake  packageBuildTreeSettings.cmake.in  packageConfig.cmake.in
extra/: sqrat.fpc.in  squirrel.fpc.in  switchwire.fpc.in
src/: CMakeLists.txt
src/eventmanager/: CMakeLists.txt  EventBase.h  EventManager.cxx
src/example/: BasicClass.cxx  BasicStatic.cxx  CMakeLists.txt  ConnectScripts.h  ExposeSignals.h  main.cxx  printAnInt.nut  scripting.cxx  slotinclass.h
src/example/scripting/: CMakeLists.txt  ExplicitReceiveInt.nut  ExplicitSendInt.nut  ExplicitSignalBinding.cxx  ExplicitSlotBinding.cxx  ReceiveEvent.cxx  ReceiveInt.nut  SendEvent.cxx  SendInt.nut
src/switchwire/: BooleanPropagationCombiner.h  CMakeLists.txt  CompilerGuards.h  ConnectSignals.h  ConnectionMonopoly.cxx  ConnectionMonopoly.h  Event.h  EventBase.h  EventManager.cxx  EventManager.h  Exports.h  InteractionEvent.cxx  InteractionEvent.h  Logging.h  OptionalMacros.h  PointerTypes.h  ScopedConnectionList.cxx  ScopedConnectionList.h  SimpleDataTypeSignalSignatures.h  SingleShotSignal.h  SlotWrapper.h  SlotWrapperBase.h  Version.cxx  Version.h.in
src/switchwire/squirrel/: CMakeLists.txt  ConnectScripts.h  Events.h  ExposeSignals.h  ExposeSlots.h  ManagedLifetime.h  SQStdMap.h  SQStdVector.h  SqratFunctionPtr.h  SquirrelContext.h
